<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/toolbar"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/llButtons"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/llButtons"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/text_enter_message"
                android:textColor="@color/txtPrime"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTextMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/apk_edit_text_background"
                android:elevation="3dp"
                android:hint="@string/enter_message_here"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:textColor="@color/txtPrime"
                android:textColorHint="@color/txtSecond"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="@string/text_enter_repetition_limit"
                android:textColor="@color/txtPrime"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTextRepeateNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:layout_weight="2"
                    android:background="@drawable/apk_edit_text_background"
                    android:elevation="3dp"
                    android:hint="Number"
                    android:inputType="number"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/txtPrime"
                    android:textColorHint="@color/txtSecond"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/text_limit_note"
                    android:textColor="@color/red"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/apk_light_green_box"
                    android:orientation="horizontal"
                    android:paddingVertical="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingStart="13dp"
                        android:text="@string/text_new_line_on"
                        android:textColor="@color/items"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchNewLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:paddingEnd="@dimen/margin_5"
                        android:textColorHint="@color/app_light_color" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btnRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/items"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:text="@string/text_repeat"
                    android:textColor="@color/white"
                    app:cornerRadius="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/card_background"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/fl_adplaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTextRepeates"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/apk_edit_text_background"
                android:elevation="3dp"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="@color/txtPrime"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/transprant"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/items"
            android:paddingHorizontal="15dp"
            android:text="@string/text_copy"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/items"
            android:paddingHorizontal="15dp"
            android:text="@string/text_clear"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/items"
            android:paddingHorizontal="15dp"
            android:text="@string/text_share"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>