<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="16dp"
        android:background="@color/transprant"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/apk_item_border"
            android:drawableStart="@drawable/icon_arrow_left"
            android:drawableTint="@color/black"
            android:foreground="@drawable/ripple_16"
            android:gravity="center"
            android:padding="@dimen/_5dp"
            android:text="@string/text_back"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/apk_item_border"
            android:drawableEnd="@drawable/icon_arrow_right"
            android:drawableTint="@color/black"
            android:foreground="@drawable/ripple_16"
            android:gravity="center"
            android:padding="@dimen/_5dp"
            android:text="@string/text_next"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/llCopyShare"
        android:layout_below="@id/llOption"
        app:layout_constraintBottom_toTopOf="@+id/llCopyShare"
        app:layout_constraintTop_toBottomOf="@+id/llOption" />

    <LinearLayout
        android:id="@+id/llCopyShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/transprant"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/items"
            android:paddingHorizontal="16dp"
            app:cornerRadius="20dp"
            android:text="@string/text_copy"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/items"
            android:paddingHorizontal="16dp"
            android:text="@string/text_share"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>