<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginHorizontal="@dimen/_15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:elevation="2dp"
                android:gravity="top"
                android:text="@string/sure_to_delete"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/llButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:cornerRadius="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/items"
                    android:paddingHorizontal="15dp"
                    android:text="@string/text_cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:cornerRadius="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/items"
                    android:paddingHorizontal="15dp"
                    android:text="Yes"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>